add mybatis dep and mvn wrapper, modify some miswrite

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -15,7 +15,7 @@
         <module>service-order</module>
     </modules>
 
-    <artifactId>serivces</artifactId>
+    <artifactId>services</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
