--- a/services/service-order/pom.xml
+++ b/services/service-order/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cloud.heguangwu</groupId>
-        <artifactId>serivces</artifactId>
+        <artifactId>services</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
