--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
   cloud:
     nacos:
       server-addr: 172.31.16.64:8848
+#        server-addr: 192.168.1.20:8848
   profiles:
     include:
       - router
