--- a/services/service-product/src/main/resources/application.yml
+++ b/services/service-product/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     name: service-product
   cloud:
     nacos:
+      discovery:
+        server-addr: 172.31.16.64:8848
       server-addr: 172.31.16.64:8848
       config:
         import-check:
