--- a/services/service-product/src/main/resources/application.yml
+++ b/services/service-product/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9000
+  port: 9800
 
 spring:
   application:
@@ -8,7 +8,31 @@ spring:
     nacos:
       discovery:
         server-addr: 172.31.16.64:8848
-      server-addr: 172.31.16.64:8848
       config:
+        server-addr: 172.31.16.64:8848
+        username: meetyou
+        password: meetyou123
         import-check:
           enabled: false
+    # 生产者及处理配置
+    stream:
+      bindings:
+        orderProcess-in-0:
+          destination: test-topic
+          group: processor
+        orderProcess-out-0:
+          destination: order-topic
+  # rabbitmq 服务配置
+  rabbitmq:
+    host: 172.31.16.64
+    port: 5672
+    username: admin
+    password: admin123
+  config:
+    import:
+
+logging:
+  level:
+    com.alibaba.nacos.client.naming: DEBUG
+    com.alibaba.nacos.client: INFO
+    org.springframework.cloud.loadbalancer: DEBUG
